@@ -1,5 +1,11 @@
 # $Id$
 
+2008-12-26	Ivan Y. Khvostishkov
+
+	* main/DAOs/GenericDAO.class.php, test/misc/DAOTest.class.php:
+	preserve object's persistence during manipulations with identity map;
+	unit test for covering such change.
+
 2008-12-24	Vladlen Y. Koshelev
 
 	* core/Base/Assert.class.php: isNotEmpty() added, checkInteger() checks for
